[gd_scene load_steps=2 format=3 uid="uid://6c7i1eh53neo"]

[ext_resource type="Script" path="res://src/scene/win_battle_scene.gd" id="1_iq6ar"]

[node name="WinBattleScene" type="Node2D"]
script = ExtResource("1_iq6ar")

[node name="LabelExperienceValue" type="Label" parent="."]
offset_left = 68.0
offset_top = 55.0
offset_right = 135.0
offset_bottom = 78.0
text = "0"

[node name="LabelExperienceString" type="Label" parent="."]
offset_left = 29.0
offset_top = 53.0
offset_right = 96.0
offset_bottom = 76.0
text = "exp:"

[node name="LabelGoldValue" type="Label" parent="."]
offset_left = 72.0
offset_top = 27.0
offset_right = 161.0
offset_bottom = 50.0
text = "0"

[node name="LabelGoldString" type="Label" parent="."]
offset_left = 28.0
offset_top = 26.0
offset_right = 117.0
offset_bottom = 49.0
text = "Gold:"

[node name="Label3" type="Label" parent="."]
offset_left = 27.0
offset_top = 84.0
offset_right = 94.0
offset_bottom = 107.0
text = "Enemy:"

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "You won"

[node name="Button" type="Button" parent="."]
offset_left = 49.0
offset_top = 160.0
offset_right = 171.0
offset_bottom = 200.0
text = "Continue"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
